Changes for APR 1.2.0

  *) Fix Pollset corruption on Solaris 10. [Paul Querna]

  *) Add %pt support to apr_snprintf() for printing an apr_os_thread_t
     in hex format.  [Jeff Trawick]

  *) Support APR_SO_SNDBUF and APR_SO_RCVBUF on Windows.  PR 32177.
     [Sim <sgobbi datamanagement.it>, Jeff Trawick]

  *) Fix apr_table_overlap()'s handling of tables allocated from
     different pools.  [Joe Schaefer <joe+gmane@sunstarsys.com>]

  *) Add support for uuid_generate on OS X 10.4. [Paul Querna]

  *) Include the C preprocessor flags in --cflags for pkg-config.
     [Paul Querna]

  *) Fix issue with poll() followed by net I/O yielding EAGAIN on
     Mac OS 10.4 (Darwin 8). [Wilfredo Sanchez]

Changes for APR 1.1.1

  *) Disable sendfile support for S/390 only in kernel versions < 2.4.0. 
     [Joe Orton]

  *) Fix posix rwlock detection on Darwin. [Aaron Bannert]

  *) Build fix for Multicast support on HP-UX 11.00 and Tru64 [Joe Orton]

  *) Fix libapr.rc for Win32 builds [William Rowe]

  *) Rewrite apr_file_writev_full using apr_file_write_full. [Paul Querna]

  *) Use APR_RING_CONCAT for moving dead list in KQueue, sys_epoll, and 
     Event Ports. [Paul Querna]

  *) find_apr.m4: Try installed APR before bundled copy if --with-apr not
     passed to configure.  [Justin Erenkrantz]

Changes for APR 1.1.0

  *) Added apr_procattr_user_set and apr_procattr_group_set
     setting the user and group for new processes.  [Mladen Turk]

  *) Add APR Multicast functions; including support for
     Source-Specific Multicast from Colm MacCarthaigh.  [Paul Querna]

  *) Add a build script to create a solaris package.  [Graham Leggett]
  
  *) Add support for APR_TCP_DEFER_ACCEPT.  [Paul Querna]

  *) Rename the apr_file_permissions macros (APR_UREAD, APR_UWRITE etc.)
     to have prefix APR_FPROT_ (old names kept for compatibility).
     [Stas Bekman]

  *) Emit the run-time link path option in apr-config after installation